# backup

./: .gitignore  CMakeLists.txt  emit.cpp  emit.h  main.cpp
model/: model.cpp  model.h
noze-vscode/: generate.js  package-lock.json
noze-vscode/syntaxes/: noze.tmLanguage
parse/: Lexer.cpp  Lexer.h  check_function_body.cpp  check_function_body.h  parse_expr.cpp  parse_expr.h  parser.cpp  parser.h  parser_internal.h  type_utils.cpp  type_utils.h
src/: CMakeLists.txt  clang.cpp  clang.h  cmd.cpp  cmd.h  main.cpp
src/compile/: compile.cpp  compile.h
src/compile/check/: BuiltinTypes.h  Candidate.cpp  Candidate.h  CheckCtx.h  check.cpp  check.h  check_call.cpp  check_call.h  check_common.h  check_effects.cpp  check_effects.h  check_expr.cpp  check_expr.h  check_expr_call_common.cpp  check_expr_call_common.h  check_lifetime.cpp  check_lifetime.h  check_param_or_local_shadows_fun.cpp  check_param_or_local_shadows_fun.h  convert_type.cpp  convert_type.h  scope.cpp  scope.h  type_utils.cpp  type_utils.h
src/compile/diag/: LineAndColumnGetter.cpp  LineAndColumnGetter.h  SourceRange.h  diag.cpp  diag.h  parse_diag.cpp  parse_diag.h
src/compile/emit/: Names.cpp  Names.h  Writer.h  concrete_fun.cpp  concrete_fun.h  emit.cpp  emit.h  emit_body.cpp  emit_type.h  mangle.cpp
src/compile/model/: BuiltinTypes.h  Identifier.h  effect.cpp  effect.h  expr.cpp  expr.h  model.cpp  model.h  type_of_expr.cpp  type_of_expr.h  types_equal_ignore_lifetime.cpp  types_equal_ignore_lifetime.h
src/compile/parse/: Lexer.cpp  Lexer.h  ast.cpp  ast.h  expr_ast.cpp  expr_ast.h  parse_expr.cpp  parse_expr.h  parse_type.cpp  parse_type.h  parser.cpp  parser.h  type_ast.h
src/diag/: diag.h  parse_diag.h
src/emit/: CAst.h  CAst_emit.cpp  CAst_emit.h  ConcreteFun.cpp  ConcreteFun.h  EmittableType.cpp  EmittableType.h  Names.cpp  Names.h  Writer.cpp  Writer.h  concrete_fun.cpp  concrete_fun.h  emit.cpp  emit.h  emit_body.cpp  emit_body.h  emit_comment.cpp  emit_comment.h  emit_type.cpp  emit_type.h  mangle.cpp  mangle.h  substitute_type_arguments.cpp  substitute_type_arguments.h
src/host/: DocumentProvider.cpp  DocumentProvider.h  Path.cpp  Path.h
src/model/: Identifier.h  expr.h  model.cpp  model.h
src/parse/: Lexer.cpp  Lexer.h  check_function_body.cpp  check_function_body.h  parse_expr.h  parser.cpp  parser.h  type_utils.cpp  type_utils.h
src/parse/check/: BuiltinTypes.h  check_call.cpp  check_call.h  check_common.h  check_expr.cpp  check_expr.h  check_function_body.cpp  check_function_body.h  convert_type.cpp  convert_type.h  expr_ast.h  parse_expr.cpp  parse_expr.h
src/test/: TestFailure.h  TestMode.h  test.cpp  test.h  test_single.cpp  test_single.h  unit_tests.cpp
src/util/: Alloc.cpp  Alloc.h  Arena.cpp  Arena.h  ArenaArrayBuilders.h  ArenaString.cpp  ArenaString.h  BlockedList.h  Grow.h  HeapAllocatedMap.h  HeapAllocatedSet.h  KeyValuePair.h  List.h  Map.h  MaxSizeMap.h  MaxSizeStringStorage.cpp  MaxSizeStringStorage.h  MaxSizeVector.h  MultiMap.h  Option.h  Path.cpp  Path.h  PathCache.cpp  PathCache.h  PathImpl.h  Ref.h  Set.h  Slice.h  SmallMap.h  StringSlice.cpp  StringSlice.h  Vec.h  Writer.cpp  Writer.h  assert.h  collection_util.h  hash_util.h  int.cpp  int.h  io.cpp  (+6 more)
src/util/store/: Arena.cpp  Arena.h  ArenaArrayBuilders.h  ArenaString.cpp  ArenaString.h  BlockedList.h  List.h  ListBuilder.h  ListNode.h  Map.h  MaxSizeMap.h  MaxSizeSet.h  MaxSizeString.cpp  MaxSizeString.h  MaxSizeStringStorage.h  MaxSizeVector.h  MultiMap.h  NonEmptyList.h  NonEmptyList_utils.h  Set.h  Slice.h  SmallMap.h  StringSlice.cpp  StringSlice.h  collection_util.h  map_of_lists_util.h  slice_util.h
stdlib/: auto.cpp  auto.nz  scrap.nz
test/a/: main.cpp  main.nz
test/module/circular-dependency/: diagnostics-baseline.txt  main.nz
test/simple/: main.cpp  main.nz
util/: Alloc.h  Map.h  MaxSizeVector.h  Option.h  StringSlice.cpp  StringSlice.h  UnorderedCollection.h  collection_util.h  ptr.h  util.h
